--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "validated-addressinput",
+  "name": "ngjs-addressinput",
   "version": "0.0.1",
-  "description": "Address input with validation, based on google places autocomplete.",
+  "description": "Address input directive, with autocomplete and validation, for angularjs, based on google places autocomplete.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
