--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "angular": ">=1.2.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "6.24.1",
+    "del": "2.2.2",
+    "event-stream": "3.3.4",
+    "gulp": "https://registry.npmjs.org/gulp/-/gulp-3.9.1.tgz",
+    "gulp-angular": "^0.1.2",
+    "gulp-babel": "6.1.2",
+    "gulp-uglify": "2.0.1",
+    "run-sequence": "1.2.2",
+    "gulp-concat": "2.6.1"
+  },
   "keywords": [
     "address",
     "addressinput",
