--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngjs-addressinput",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Address input directive, with autocomplete and validation, for angularjs, based on google places autocomplete.",
   "main": "index.js",
   "readme": "README.md",
@@ -28,5 +28,5 @@
     "autocomplete"
   ],
   "author": "Rasmus Letterkrantz",
-  "license": "ISC"
+  "license": "MIT"
 }
